--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -18,6 +18,7 @@
     display: flex;
     align-items: center;
     gap: 40px;
+    cursor: pointer;
 }
 .navbar button{
     background: transparent;
@@ -28,6 +29,7 @@
     border-radius:50px ;
     cursor: pointer;
     transition: 0.3s;
+    
 }
 .navbar button:hover{
     background-color: #fff4f2;
@@ -42,6 +44,7 @@
 }
 .navbar-search-icon{
     position: relative;
+    cursor: pointer;
 
 }
 .navbar-search-icon .dot{
@@ -52,5 +55,53 @@
     border-radius: 5px;
     top: -8px;
     right: -8px;
+    cursor: pointer;
 
+}
+@media (max-width:1050px){
+     .navbar.logo{
+        width: 140px;
+     }
+     .navbar-menu{
+        gap: 20px;
+        font-size: 17px;
+     }
+     .navbar-right{
+        gap: 30px;
+
+     }
+     .navbar-right img{
+        width: 22px;
+     }
+     .navbar-right button{
+        padding: 8px 25px;
+     }
+}
+
+@media (max-width:900px){
+    .navbar.logo{
+       width: 120px;
+    }
+    .navbar-menu{
+       gap: 15px;
+       font-size: 16px;
+    }
+    .navbar-right{
+       gap: 20px;
+
+    }
+    .navbar-right img{
+       width: 20px;
+    }
+    .navbar-right button{
+       padding: 7px 20px;
+       font-size: 15px;
+    }
+}
+
+@media (max-width:750px){
+    
+    .navbar-menu{
+      display: none;
+}
 }
